# CS372_Robot_Arm

./: .gitignore  ATTRIBUTION.md  README.md  SETUP.md  Training Data.csv  camera_test.py  ckpt_2401.pt  ppo.ipynb  ppo.py  ppo_actor.pth  ppo_critic.pth  ppo_deploy.py  pyproject.toml  real_robot.py  requirements.txt  so100_joint_control.py  so100_joint_control_ee.py  so100_policy_deploy.py
docs/: reward_shaping.md
models/: ppo_actor.pth  ppo_critic.pth  ppo_training_data.csv
notebooks/: Training Data.csv  baseline_model_evaluation.ipynb  ppo_training.ipynb
scripts/: animate_frames.py  baseline_model.py  ppo.py
